--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Grocery.js</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="grocery.js"></script>
   </head>
   <body>
     <div class="container">
